k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hello-world
  labels:
    app.kubernetes.io/part-of: hello-world
