k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world
  namespace: hello-world
  labels:
    app.kubernetes.io/name: hello-world
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: hello-world
  ports:
    - name: http
      port: 80
      targetPort: http
